ZETLAB/ZetHeaders/Zadc.h

// Поддерживаемые типы устройств
#define KD1610	0	// ADC 16/200
#define KD216	1	// APC 216
#define KD500	2	// ADC 16/500
#define KD500P	3	// ADC 16/500P
#define KD816	4	// ADC 816
#define KD1002	5	// ADC 1002
#define KDU216	6	// APC 216 USB
#define KD24	7	// ADC 24
#define KD1432	8	// ADC 1432
#define KDUACPB	9	// ACPB USB
#define KDU1616	10	// ZET210
#define KDUPD14	11	// PD14 USB
#define KDUVN	12	// ZET110
#define KDUOSC	13	// ZET302
#define KDU8500	14	// A17U8
#define KDU2500	15	// A17U2
#define KDU1624	16	// ZET220
#define KDU0424	17	// ZET230
#define KDU0414	18	// ZET048
// ------------- Функции эксклюзивных режимов -------------
// Перейти в эксклюзивный режим №1
//(заблокирован только доступ к устройству, открытие и выполнение функций драйвера - разрешен)
long WINAPI ZExclusive1Open(long typeDevice, long numberDSP);
// Выйти из эксклюзивного режима №1
long WINAPI ZExclusive1Close(long typeDevice, long numberDSP);
// послать команду DSP (size - кратен 512)
long WINAPI ZSendCommand(long typeDevice, long numberDSP, void *buffer, long *size);
// принять команду DSP (size - кратен 512)
long WINAPI ZReceiveCommand(long typeDevice, long numberDSP, void *buffer, long *size);
// ------------- Функции настройки TCP/IP -------------
// Прочитать настройки Ethernet устройства для TCP/IP из ПЗУ
long WINAPI ZReadSettingsEthernet(long typeDevice, long numberDSP, unsigned char *sourceIPAdr,
								  unsigned short *sourcePort0, unsigned char *subnetMask,
								  unsigned char *gatewayIPAdr, unsigned char *sourceMACAdr,
								  unsigned char *duplex, unsigned char *speed100Mb,
								  unsigned short *TimeoutWDOG, unsigned short *Reserved);
// Сохранить настройки Ethernet устройства для TCP/IP в ПЗУ
long WINAPI ZSaveSettingsEthernet(long typeDevice, long numberDSP, unsigned char *sourceIPAdr,
								  unsigned short *sourcePort0, unsigned char *subnetMask,
								  unsigned char *gatewayIPAdr, unsigned char *sourceMACAdr,
								  unsigned char *duplex, unsigned char *speed100Mb,
								  unsigned short TimeoutWDOG, unsigned short Reserved);
// ------------- Функции настройки PTP -------------
// Прочитать настройки PTP из ПЗУ
long WINAPI ZReadSettingsPTP(long typeDevice, long numberDSP,
							 unsigned char *enableMaster, unsigned char *enableSlave, unsigned char *domain,
							 unsigned char *absolutePriority, unsigned char *relativePriority);
// Сохранить настройки PTP в ПЗУ
long WINAPI ZSaveSettingsPTP(long typeDevice, long numberDSP,
							 unsigned char enableMaster, unsigned char enableSlave, unsigned char domain,
							 unsigned char absolutePriority, unsigned char relativePriority);
// ------------- Функции калибровки АЦП/ЦАП -------------
// Функции для калибровки АЦП/ЦАП
// DigitalResolChan:	 при коэф. усиления == 1.0 - вес младшего разряда, В)
//						 при коэф. усиления > 1.0 - коэф. усиления
// offsetChan - текущее смещение, В 
long WINAPI ZGetCalibrDataADC(long typeDevice, long numberDSP, long numberChannel, double *digitalResolChan, double *offsetChan);
long WINAPI ZGetCalibrDataDAC(long typeDevice, long numberDSP, long numberChannel, double *digitalResolChan, double *offsetChan);
long WINAPI ZSetCalibrDataADC(long typeDevice, long numberDSP, long numberChannel, double digitalResolChan, double offsetChan);
long WINAPI ZSetCalibrDataDAC(long typeDevice, long numberDSP, long numberChannel, double digitalResolChan, double offsetChan);
long WINAPI ZReadCalibrData(long typeDevice, long numberDSP);		// прочитать из ПЗУ прибора в драйвер
long WINAPI ZSetDefaultCalibrData(long typeDevice, long numberDSP);	// установить калибровки по умолчанию
long WINAPI ZSaveCalibrData(long typeDevice, long numberDSP);		// записать из драйвера в ПЗУ
// ------------- Общие функции -------------
// подключиться к драйверу
long WINAPI ZOpen(long typeDevice, long numberDSP);
// отключиться от драйвера
long WINAPI ZClose(long typeDevice, long numberDSP);
// сброс и останов сигнальных процессоров (влияет на все DSP одного устройства)
long WINAPI ZResetDSP(long typeDevice, long numberDSP);
// проинициализировать сигнальный процессор
long WINAPI ZInitDSP(long typeDevice, long numberDSP, const char *fileName);
// получить серийный номер DSP
long WINAPI ZGetSerialNumberDSP(long typeDevice, long numberDSP, long *serialNumber);
// получить номер ревизии микропрограммы DSP
long WINAPI ZGetRevisionDSP(long typeDevice, long numberDSP, long *revisionNumber);
// получить имя устройства (возвращаемая строка не более 16 символов вместе с завершающим 0, maxSizeStr - размер буфера strName[])
long WINAPI ZGetNameDevice(long typeDevice, long numberDSP, char *strName, long maxSizeStr);
// получить версии ПО (возвращаемые строки не более 64 символов вместе с завершающим 0)
long WINAPI ZGetVersion(long typeDevice, long numberDSP, char *verDSP, char *verDRV, char *verLIB);
// получить тип интерфейса (1 - PCI, 2 - USB, 3 - Ethernet)
long WINAPI ZGetTypeConnection(long typeDevice, long numberDSP, long *type);
// опросить аппаратные возможности устр-ва
long WINAPI ZGetDeviceCapabilities(long typeDevice, long numberDSP, long *capabilities);
// прочитать код ошибки
long WINAPI ZGetError(long typeDevice, long numberDSP, long *error);
// определить кол-во изменений параметров с момента загрузки
long WINAPI ZGetModify(long typeDevice, long numberDSP, long *modify);
// прочитать всю информацию о модуле АЦП, ЦАП из драйвера
long WINAPI ZGetData(long typeDevice, long numberDSP, ADC_INFO *Data);
// прочитать всю информацию о модуле АЦП, ЦАП из DSP
long WINAPI ZGetInfo(long typeDevice, long numberDSP, ADC_INFO *Data);
// передать информацию в DSP (кроме размера прерывания и старта)
long WINAPI ZPutInfo(long typeDevice, long numberDSP, ADC_INFO *Data);
// прочитать флаг - количество прерываний DSP (пакетов) с момента ZStartADC()
long WINAPI ZGetFlag(long typeDevice, long numberDSP, unsigned long *flag);
// запустить тест шлейфа для плат PnP
long WINAPI ZTestCode(long typeDevice, long numberDSP, long *code0, long *code1, long *code2);
// запуск процедуры ввода/вывода сигнала
long WINAPI ZStartADC(long typeDevice, long numberDSP);