ZETLAB/ZetHeaders/Zadc.bas

Attribute VB_Name = "ZadcModule"
Option Explicit

' Поддерживаемые типы устройств
Global Const KD1610 = 0         ' ADC 16/200
Global Const KD216 = 1          ' APC 216
Global Const KD500 = 2          ' ADC 16/500
Global Const KD500P = 3         ' ADC 16/500P
Global Const KD816 = 4          ' ADC 816
Global Const KD1002 = 5         ' ADC 1002
Global Const KDU216 = 6         ' APC 216 USB
Global Const KD24 = 7           ' ADC 24
Global Const KD1432 = 8         ' ADC 1432
Global Const KDUACPB = 9        ' ACPB USB
Global Const KDU1616 = 10       ' ZET210
Global Const KDUPD14 = 11       ' PD14 USB
Global Const KDUVN = 12         ' ZET110
Global Const KDUOSC = 13        ' ZET302
Global Const KDU8500 = 14       ' A17U8
Global Const KDU2500 = 15       ' A17U2
Global Const KDU1624 = 16       ' ZET220
Global Const KDU0424 = 17       ' ZET230
Global Const KDU0414 = 18       ' ZET240


' Функция ожидания
Public Declare Sub Sleep Lib "kernel32" (ByVal dwMilliseconds As Long)
' Функция чтения памяти
Public Declare Sub CopyMemory Lib "kernel32" Alias "RtlMoveMemory" _
 (lpDest As Any, lpSrc As Any, ByVal Length As Long)


'Все функции возвращают код ошибки. 0 - нет ошибки, иначе - код ошибки


' ------------- Функции эксклюзивного режима №1 -------------
' подключиться к драйверу в эксклюзивном режиме №1
Public Declare Function ZExclusive1Open Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' отключиться от драйвера в эксклюзивном режиме №1
Public Declare Function ZExclusive1Close Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' послать команду DSP
Public Declare Function ZSendCommand Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any, ByRef size As Long) As Long
' принять команду DSP
Public Declare Function ZReceiveCommand Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, buffer As Any, ByRef size As Long) As Long


' ------------- Функции настройки TCP/IP -------------
' Прочитать настройки Ethernet устройства для TCP/IP из ПЗУ
Public Declare Function ZReadSettingsEthernet Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef sourceIPAdr As Byte, ByRef sourcePort0 As Long, _
 ByRef subnetMask As Byte, ByRef gatewayIPAdr As Byte, ByRef sourceMACAdr As Byte, _
 ByRef duplex As Byte, ByRef speed100Mb As Byte, ByRef TimeoutWDOG As Long, ByRef Reserved As Integer) As Long
' Сохранить настройки Ethernet устройства для TCP/IP в ПЗУ
Public Declare Function ZSaveSettingsEthernet Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef sourceIPAdr As Byte, ByRef sourcePort0 As Long, _
 ByRef subnetMask As Byte, ByRef gatewayIPAdr As Byte, ByRef sourceMACAdr As Byte, _
 ByRef duplex As Byte, ByRef speed100Mb As Byte, ByVal TimeoutWDOG As Long, ByVal Reserved As Integer) As Long

' ------------- Функции настройки PTP -------------
' Прочитать настройки PTP из ПЗУ
Public Declare Function ZReadSettingsPTP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, _
 ByRef enableMaster As Byte, ByRef enableSlave As Byte, ByRef domain As Byte, _
 ByRef absolutePriority As Byte, ByRef relativePriority As Byte) As Long
' Сохранить настройки PTP в ПЗУ
Public Declare Function ZSaveSettingsPTP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, _
 ByVal enableMaster As Byte, ByVal enableSlave As Byte, ByVal domain As Byte, _
 ByVal absolutePriority As Byte, ByVal relativePriority As Byte) As Long

' ------------- Функции калибровки АЦП/ЦАП -------------
' Функции для калибровки АЦП/ЦАП
' DigitalResolChanADC/DAC:  при коэф. усиления == 1.0 - вес младшего разряда
'                           при коэф. усиления > 1.0 - коэф. усиления
Public Declare Function ZGetCalibrDataADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByRef digitalResolChan As Double, ByRef offsetChan As Double) As Long
Public Declare Function ZGetCalibrDataDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByRef digitalResolChan As Double, ByRef offsetChan As Double) As Long
 
Public Declare Function ZSetCalibrDataADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByVal digitalResolChan As Double, ByVal offsetChan As Double) As Long
Public Declare Function ZSetCalibrDataDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByVal digitalResolChan As Double, ByVal offsetChan As Double) As Long
 ' прочитать из ПЗУ прибора в драйвер
Public Declare Function ZReadCalibrData Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' установить калибровки по умолчанию
Public Declare Function ZSetDefaultCalibrData Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' записать из драйвера в ПЗУ
Public Declare Function ZSaveCalibrData Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
 
' Устаревшие функции!!!
' установить вес младшего разряда АЦП/ЦАП
Public Declare Function ZSetDigitalResolChanADC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByVal digitalResolChan As Double) As Long
Public Declare Function ZSetDigitalResolChanDAC Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal numberChannel As Long, _
 ByVal digitalResolChan As Double) As Long
' прочитать из ПЗУ вес младшего разряда АЦП и ЦАП
Public Declare Function ZReadDigitalResolChan Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' сохранить в ПЗУ вес младшего разряда АЦП и ЦАП
Public Declare Function ZSaveDigitalResolChan Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long



' ------------- Общие функции -------------
' подключиться к драйверу
Public Declare Function ZOpen Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' отключиться от драйвера
Public Declare Function ZClose Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long

' сброс и останов сигнальных процессоров (влияет на все DSP одного устройства)
Public Declare Function ZResetDSP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long) As Long
' проинициализировать сигнальный процессор
Public Declare Function ZInitDSP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal filename As String) As Long
' получить серийный номер DSP
Public Declare Function ZGetSerialNumberDSP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef serialNumber As Long) As Long
' получить номер ревизии микропрограммы DSP
Public Declare Function ZGetRevisionDSP Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef revisionNumber As Long) As Long
' получить имя устройства (возвращаемая строка не более 16 символов вместе с завершающим 0, maxSizeStr - размер буфера strName[])
Public Declare Function ZGetNameDevice Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal verDSP As String, ByVal maxSizeStr As Long) As Long
' получить версии ПО
Public Declare Function ZGetVersion Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByVal verDSP As String, ByVal verDRV As String, ByVal verLIB As String) As Long
' получить тип интерфейса (1 - PCI, 2 - USB, 3 - Ethernet)
Public Declare Function ZGetTypeConnection Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef typeConnection As Long) As Long
' опросить аппаратные возможности устр-ва
'long WINAPI ZGetDeviceCapabilities(long typeDevice, long numberDSP, long *capabilities);
Public Declare Function ZGetDeviceCapabilities Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef capabilities As Long) As Long

' прочитать код ошибки
Public Declare Function ZGetError Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef error As Long) As Long
' определить кол-во изменений параметров с момента загрузки
Public Declare Function ZGetModify Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef modify As Long) As Long

' прочитать всю информацию о модуле АЦП, ЦАП из драйвера
Public Declare Function ZGetData Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef data As ADC_INFO) As Long
' прочитать всю информацию о модуле АЦП, ЦАП из DSP
Public Declare Function ZGetInfo Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef data As ADC_INFO) As Long
' передать информацию в DSP (кроме размера прерывания и старта)
Public Declare Function ZPutInfo Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef data As ADC_INFO) As Long

' прочитать флаг - количество прерываний с момента ZStartADC()
Public Declare Function ZGetFlag Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef Flag As Long) As Long

Public Declare Function ZTestCode Lib "Zadc.dll" _
(ByVal typeDevice As Long, ByVal numberDSP As Long, ByRef code0 As Long, ByRef code1 As Long, ByRef code2 As Long) As Long
